--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,14 +1,23 @@
-steps:
-  # Checks-out your repository under $GITHUB_WORKSPACE, so auto-minify job can access it
-  - uses: actions/checkout@v2
+name: Auto Minifier CSS
 
-  - name: Auto Minify
-    uses: nizarmah/auto-minify@v2.1
+on: push
 
-  # Auto commits minified files to the repository
-  # Ignore it if you don't want to commit the files to the repository
-  - name: Auto committing minified files
-    uses: stefanzweifel/git-auto-commit-action@v4
-    with:
-      commit_message: "Github Action: Auto Minified JS and CSS files"
-      branch: ${{ github.ref }}
+jobs:
+
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
+      - name: Auto Minify
+        uses: nizarmah/auto-minify@v2.1.1
+        with:
+          overwrite: false
+          directory: .
+          maxdepth: 20
+      - name: Auto commit minified files
+        uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: "Github Action: Auto Minified JS and CSS files"
+          branch: ${{ github.ref }}
