--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,17 +1,10 @@
-steps:
-  # Checks-out your repository under $GITHUB_WORKSPACE, so auto-minify job can access it
-  - uses: actions/checkout@v2
-
-  - name: Auto Minify
-    uses: nizarmah/auto-minify@v2.1
-    with:
-      directory: 'src'
-
-  # Auto commits minified files to the repository
-  # Ignore it if you don't want to commit the files to the repository
-  - name: Auto committing minified files
-    uses: stefanzweifel/git-auto-commit-action@v4
-    with:
-      repository: 'src'
-      commit_message: "Github Action: Auto Minified JS and CSS files"
-      branch: ${{ github.ref }}
+jobs:
+  build:
+    runs-on: ubuntu-latest      # Docker-based github actions have to run on a linux environment
+    steps:
+      - name: HTML/CSS/JS Minifier
+        uses: docker://devatherock/minify-js:1.0.3
+        with:
+          directory: 'src'      # Optional
+          output: 'minify/src'  # Optional
+          add_suffix: false     # Optional
